@@ -157,10 +157,10 @@ if ($_SERVER['REQUEST_METHOD'] == "POST")
 
       if ($CONF['alias_control_admin'] == "YES")
       {
-         $query = "SELECT address,goto,modified,active FROM alias WHERE domain='$fDomain' ORDER BY address LIMIT $limitSql";
+         $query = "SELECT address,goto,modified,active FROM $table_alias WHERE domain='$fDomain' ORDER BY address LIMIT $limitSql";
          if ('pgsql'==$CONF['database_type'])
          {
-            $query = "SELECT address,goto,extract(epoch from modified) as modified,active FROM alias WHERE domain='$fDomain' ORDER BY address LIMIT $limitSql";
+            $query = "SELECT address,goto,extract(epoch from modified) as modified,active FROM $table_alias WHERE domain='$fDomain' ORDER BY address LIMIT $limitSql";
          }
       }
       else
